--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <div [@toggleMainMenu]="animationState"
+     (@toggleMainMenu.start)="toggleMainMenuStart($event)"
      class="main-menu">
     <div [class.main-menu-hidden]="false && animationState === 'hide'"
          class="main-menu-content">
@@ -36,8 +37,7 @@
 </div>
 
 
-<div [@toggleMainMenuBlurMainContainer]="animationState"
-     class="main-container">
+<div class="main-container">
     <mat-toolbar color="primary"
                  class="main-container-toolbar">
         <span>Welcome to {{ title }}!</span>
