--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -8,7 +8,8 @@
     top: 0;
     left: 0;
     background: #eee;
-    width: 60px;
+    width: 500px;
+    margin: 0 -440px;
     height: calc(100% + 100px);
     min-width: 60px;
     max-width: 800px;
