--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,7 @@
+@import 'assets/fonts/font-awesome/scss/fontawesome.scss';
+@import 'assets/fonts/font-awesome/scss/fa-solid';
+@import 'assets/fonts/font-awesome/scss/fa-regular';
+@import 'assets/fonts/font-awesome/scss/fa-brands';
 @import '~@angular/material/theming';
 // Include the common styles for Angular Material. We include this here so that you only
 // have to load a single css file for Angular Material in your app.
@@ -7,9 +11,9 @@
 // (imported above). For each palette, you can optionally specify a default, lighter, and darker
 // hue.
 $candy-app-primary: mat-palette($mat-blue);
-$candy-app-accent : mat-palette($mat-pink, A200, A100, A400);
+$candy-app-accent: mat-palette($mat-pink, A200, A100, A400);
 // The warn palette is optional (defaults to red).
-$candy-app-warn : mat-palette($mat-red);
+$candy-app-warn: mat-palette($mat-red);
 // Create the theme object (a Sass map containing all of the palettes).
 $candy-app-theme: mat-light-theme($candy-app-primary, $candy-app-accent, $candy-app-warn);
 // Include theme styles for core and each component used in your app.
@@ -42,4 +46,12 @@ body {
   direction: ltr;
   -webkit-font-feature-settings: 'liga';
   -webkit-font-smoothing: antialiased;
+}
+
+.mat-button {
+  .fa,
+  .far,
+  .fas {
+    font-size: 20px;
+  }
 }
