--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,4 +1,20 @@
 :host {
+
+.example-viewport {
+  width: 100%;
+  height: 100%;
+}
+
+  .aaa {
+  height: 100%;
+  position: absolute;
+  /* top: 0; */
+  /* left: 0; */
+  width: 100%;
+
+  }
+
+
   .main-menu-hidden {
     display: none;
   }
@@ -26,8 +42,10 @@
         height: 64px;
       }
       .main-menu-content-body {
+        height: 100%;
         display: none;
         .main-mat-tab-group {
+          height: 100%;
           .main-no-tab-label,
           .mat-tab-label {
             display: none;
