--- a/src/styles.scss
+++ b/src/styles.scss
@@ -60,8 +60,24 @@ body {
 .main-menu {
   .mat-tab-body-wrapper {
     flex: 1;
+    height: 300px;
   }
   .mat-tab-label {
     display: none !important;
+  }
+}
+
+
+.mat-tab-body-wrapper {
+  flex:1;
+}
+.mat-card-avatar {
+  height: 50px !important;
+  width: 50px !important;
+  margin: 13px;
+  img {
+    width: 100%;
+    height: 100%;
+    border-radius: inherit;
   }
 }
