feat(virtual-scroll): Поправить стили карточки, изменить директиву скроллинга.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -34,7 +34,7 @@ position: absolute;">
                     <div *cdkVirtualFor="let item of objContent; templateCacheSize: 0"
                          style="padding:30px;padding-bottom: 0;">
                         <mat-card class="lorem-ipsum-card"
-                                  style="">
+                                  style="max-width:800px;margin: auto;">
                             <mat-card-header>
                                 <div mat-card-avatar>
 
