--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,7 +1,8 @@
-@import 'assets/fonts/font-awesome/scss/fontawesome.scss';
-@import 'assets/fonts/font-awesome/scss/fa-solid';
-@import 'assets/fonts/font-awesome/scss/fa-regular';
-@import 'assets/fonts/font-awesome/scss/fa-brands';
+@import 'assets/fonts/font-awesome-light/_fontawesome.css';
+// @import 'assets/fonts/font-awesome/scss/fontawesome.scss';
+// @import 'assets/fonts/font-awesome/scss/fa-solid';
+// @import 'assets/fonts/font-awesome/scss/fa-regular';
+// @import 'assets/fonts/font-awesome/scss/fa-brands';
 @import '~@angular/material/theming';
 // Include the common styles for Angular Material. We include this here so that you only
 // have to load a single css file for Angular Material in your app.
